front-end/pages/strategy-page/strategy.css
/* Basic CSS Setup */

/* Layout */
.strategyPageLayout {
    display: grid;
    grid-template-columns: 28% 72%;
    grid-template-rows: auto 1fr;
    gap: 20px;
    height: 100vh;
    padding: 20px;
}

/* Title color */
.strategyTitles {
    color: #000000;
}

/* Link and bullet colors - Side panel*/
#strategy_List_id li::marker {
    color: #07357F;
}

#strategy_List_id a,
a:visited,
a:active {
    color: #07357F;
}

#strategy_List_id a:hover {
    color: #03193d;
}

/* Bullet (number) colors and spacing - Main panel*/
#main_Strategy_List_id li::marker {
    font-size: 22px;
    font-weight: bold;
}

#main_Strategy_List_id li {
    margin-bottom: 20px;
}

/* Scrollbar styling - General and content*/
.strategyScrollBarSide,
.strategyScrollBarMain {
    height: 100%;
    overflow: auto;
}

.strategyScrollBarSide {
    grid-column: 1;
    grid-row: 1/-1;
    background-color: #B0CEFF;
    /* (top and bottom) (left and right) */
    padding: 20px 45px;
    font-size: 25px;
    line-height: 55px;
    overflow: auto;
}

.strategyScrollBarMain {
    grid-column: 2;
    grid-row: 1/-1;
    background-color: #D9E8FF;
    /* top right bottom left */
    padding: 20px 30px 20px 50px;
    margin-right: 20px;
    overflow: auto;
}

/* Scrollbar styling - Track*/
.strategyScrollBarSide::-webkit-scrollbar,
.strategyScrollBarMain::-webkit-scrollbar {
    width: 10px;
}

.strategyScrollBarSide::-webkit-scrollbar-track,
.strategyScrollBarSide::-webkit-scrollbar-track {
    background: #D9D9D9;
    border-radius: 8px;
}

/* Scrollbar styling - Thumb*/
.strategyScrollBarSide::-webkit-scrollbar-thumb,
.strategyScrollBarMain::-webkit-scrollbar-thumb {
    background: #6e6e6e;
    border-radius: 8px;
}

.strategyScrollBarSide::-webkit-scrollbar-thumb:hover,
.strategyScrollBarMain::-webkit-scrollbar-thumb:hover {
    background: #4c4c4c;
}

/* Illustration size */
.strategyIllustrations img {
    width: 400px;
}

/* Tooltip */
.tooltip {
    position: relative;
    grid-column: 1;
    grid-row: 1;
    justify-self: end;
    align-self: start;
    margin-top: 15px;
    margin-right: 20px;
    z-index: 10;
}

/* Tooltip - Button */
.tooltipButton {
    width: 30px;
    height: 30px;
    font-family: "Radio Canada", sans-serif;
    font-size: 20px;
    border-radius: 50%;
    border: none;
    background-color: #D9D9D9;
    cursor: pointer;
    z-index: 11;
}

.tooltipButton:hover {
    background-color: #b6b6b6;
}

/* Tooltip - Popup */
.tooltipText {
    position: absolute;
    top: 45px;
    width: 350px;
    background-color: #FFFFFF;
    border: 4px solid #4168A9;
    border-radius: 4px;
    /* (top and bottom) (left and right) */
    padding: 5px 10px;
    visibility: hidden;
}

.tooltip:hover .tooltipText {
    visibility: visible;
}

